Got sharemind emulator working on docker

--- a/docker/scripts/client.conf
+++ b/docker/scripts/client.conf
@@ -35,8 +35,8 @@ BufferSize = 1048576
 [Network]
 
 ; Identity information
-PublicKeyFile=%{CurrentFileDirectory}/client-public-key
-PrivateKeyFile=%{CurrentFileDirectory}/client-private-key
+PublicKeyFile=/root/lpsec/scripts/client-public-key
+PrivateKeyFile=/root/lpsec/scripts/client-private-key
 
 ConnectTimeout=30000
 
@@ -48,21 +48,21 @@ ConnectTimeout=30000
 [Server DebugMiner1]
 Address = 127.0.0.1
 Port = 30001
-PublicIdentity = %{CurrentFileDirectory}/miner1-public-key
+PublicIdentity = /root/lpsec/scripts/miner1-public-key
 ;OutgoingTlsPriorities = NONE:+CTYPE-X509:+VERS-TLS1.2:+AES-256-GCM:+ECDHE-RSA:+AEAD:+ECDHE-RSA:+COMP-NULL:+SIGN-RSA-SHA512:+CURVE-SECP521R1:%NO_TICKETS
 ;MaxPayloadSize = 131059
 
 [Server DebugMiner2]
 Address = 127.0.0.1
 Port = 30002
-PublicIdentity = %{CurrentFileDirectory}/miner2-public-key
+PublicIdentity = /root/lpsec/scripts/miner2-public-key
 ;OutgoingTlsPriorities = NONE:+CTYPE-X509:+VERS-TLS1.2:+AES-256-GCM:+ECDHE-RSA:+AEAD:+ECDHE-RSA:+COMP-NULL:+SIGN-RSA-SHA512:+CURVE-SECP521R1:%NO_TICKETS
 ;MaxPayloadSize = 131059
 
 [Server DebugMiner3]
 Address = 127.0.0.1
 Port = 30003
-PublicIdentity = %{CurrentFileDirectory}/miner3-public-key
+PublicIdentity = /root/lpsec/scripts/miner3-public-key
 ;OutgoingTlsPriorities = NONE:+CTYPE-X509:+VERS-TLS1.2:+AES-256-GCM:+ECDHE-RSA:+AEAD:+ECDHE-RSA:+COMP-NULL:+SIGN-RSA-SHA512:+CURVE-SECP521R1:%NO_TICKETS
 ;MaxPayloadSize = 131059
 
