--- a/docker/scripts/emulator-access-control.conf
+++ b/docker/scripts/emulator-access-control.conf
@@ -12,7 +12,7 @@
 ;
 
 [User DebugUser]
-TlsPublicKeyFile = %{CurrentFileDirectory}/client-public-key
+TlsPublicKeyFile = /root/lpsec/scripts/client-public-key
 
 
 ;
