--- a/docker/scripts/emulator.conf
+++ b/docker/scripts/emulator.conf
@@ -11,7 +11,7 @@ File = libsharemind_facility_executionprofiler.so
 Configuration = Logger emulator-profile.csv
 
 [AccessControl]
-PoliciesFile = %{CurrentFileDirectory}/emulator-access-control.conf
+PoliciesFile = /root/lpsec/scripts/emulator-access-control.conf
 DefaultUser = DebugUser
 
 [Module executionprofiler]
@@ -36,21 +36,21 @@ File = libsharemind_mod_spdz_fresco_emu.so
 
 [Module tabledb]
 File = libsharemind_mod_tabledb.so
-Configuration = %{CurrentFileDirectory}/tabledb.cfg
+Configuration = /root/lpsec/scripts/tabledb.cfg
 
 [Module keydb]
 File = libsharemind_mod_keydb.so
-Configuration = %{CurrentFileDirectory}/keydb.cfg
+Configuration = /root/lpsec/scripts/keydb.cfg
 
 [ProtectionDomain pd_aby]
 Kind = aby
-Configuration = %{CurrentFileDirectory}/aby_emu.cfg
+Configuration = /root/lpsec/scripts/aby_emu.cfg
 
 [ProtectionDomain pd_shared3p]
 Kind = shared3p
-Configuration = %{CurrentFileDirectory}/shared3p_emu.conf
+Configuration = /root/lpsec/scripts/shared3p_emu.conf
 
 [ProtectionDomain pd_spdz_fresco]
 Kind = spdz_fresco
-Configuration = %{CurrentFileDirectory}/spdz_fresco_emu.cfg
+Configuration = /root/lpsec/scripts/spdz_fresco_emu.cfg
 
