--- a/docker/scripts/miner1-tabledb.cfg
+++ b/docker/scripts/miner1-tabledb.cfg
@@ -4,4 +4,4 @@ File = libsharemind_mod_tabledb_hdf5.so
 [DataSource1]
 Name = DS1
 DBModule = tabledb_hdf5
-Configuration = %{CurrentFileDirectory}/miner1-tabledb_hdf5-DS1.cfg
+Configuration = /root/lpsec/scripts/miner1-tabledb_hdf5-DS1.cfg
