--- a/docker/scripts/aby_emu.cfg
+++ b/docker/scripts/aby_emu.cfg
@@ -1,2 +1,2 @@
 [ProtectionDomain]
-ModelEvaluatorConfiguration = %{CurrentFileDirectory}/aby_emu-models.cfg
+ModelEvaluatorConfiguration = /root/lpsec/scripts/aby_emu-models.cfg
