--- a/docker/scripts/shared3p_emu.conf
+++ b/docker/scripts/shared3p_emu.conf
@@ -1,3 +1,3 @@
 [ProtectionDomain]
-ModelEvaluatorConfiguration = %{CurrentFileDirectory}/shared3p_emu-models.conf
+ModelEvaluatorConfiguration = /root/lpsec/scripts/shared3p_emu-models.conf
 
