--- a/docker/scripts/spdz_fresco_emu.cfg
+++ b/docker/scripts/spdz_fresco_emu.cfg
@@ -1,3 +1,3 @@
 [ProtectionDomain]
-ModelEvaluatorConfiguration = %{CurrentFileDirectory}/spdz_fresco_emu-models.cfg
+ModelEvaluatorConfiguration = /root/lpsec/scripts/spdz_fresco_emu-models.cfg
 
